# consai2r2

./: .clang-format  .gitignore  CONTRIBUTING.md  README.md
.github/workflows/: ROS2-Dashing.yaml  industrial_ci.yml
consai2_msgs/: CMakeLists.txt  package.xml
consai2_msgs/msg/: RobotCommand.msg
consai2_sender/: CMakeLists.txt  package.xml
consai2_sender/src/: sim_sender.cpp
consai2_teleop/: CMakeLists.txt  package.xml
consai2_teleop/include/consai2_teleop/: joystick_component.hpp
consai2_teleop/src/: joystick_component.cpp  teleop_node.cpp
consai2r2_description/: CMakeLists.txt  README.md  package.xml
consai2r2_description/config/: config.yaml
consai2r2_description/consai2r2_description/: __init__.py  parameter.py
consai2r2_description/include/consai2r2_description/: parameters.hpp
consai2r2_description/launch/: config.launch.py  description.launch.py  params.launch.py
consai2r2_description/src/: consai2r2_description_node.cpp
consai2r2_examples/: CMakeLists.txt  README.md  package.xml
consai2r2_examples/launch/: joystick_example.launch.py
consai2r2_gameviewer/: CMakeLists.txt  package.xml  plugin.xml
consai2r2_gameviewer/resource/: gameviewer_widget.ui
consai2r2_gameviewer/scripts/: consai2r2_gameviewer
consai2r2_gameviewer/src/consai2r2_gameviewer/: gameviewer.py  gameviewer_widget.py
consai2r2_msgs/: CMakeLists.txt  package.xml
consai2r2_msgs/msg/: BallInfo.msg  DecodedReferee.msg  Referee.msg  RefereeGameEvent.msg  RefereeTeamInfo.msg  RobotCommands.msg  RobotInfo.msg  RobotStatus.msg  VisionDetections.msg
consai2r2_protobuf/: CMakeLists.txt  package.xml
consai2r2_receiver/: CMakeLists.txt  package.xml
consai2r2_receiver/include/: multicast.h  multicast.hpp
consai2r2_receiver/include/consai2r2_receiver/: multicast.hpp
consai2r2_receiver/src/: referee_receiver.cpp  sim_status_receiver.cpp  vision_receiver.cpp
consai2r2_referee_wrapper/: package.xml  setup.cfg  setup.py
consai2r2_referee_wrapper/consai2r2_referee_wrapper/: referee_wrapper.py
consai2r2_sender/: CMakeLists.txt  README.md  package.xml
consai2r2_sender/config/: grsim.yaml
consai2r2_sender/launch/: sender.launch.py
consai2r2_sender/src/: sim_sender.cpp
consai2r2_teleop/: CMakeLists.txt  package.xml
consai2r2_teleop/config/: joy_dualshock3.yaml  joy_f710.yaml
consai2r2_teleop/include/consai2r2_teleop/: joystick_component.hpp  visibility_control.h  visibility_control.hpp
consai2r2_teleop/src/: joystick_component.cpp  teleop_node.cpp
consai2r2_vision_wrapper/: package.xml  setup.cfg  setup.py
consai2r2_vision_wrapper/consai2r2_vision_wrapper/: vision_wrapper.py
