<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>consai2r2_description</name>
  <version>0.1.0</version>
  <description>This package sets parameters for CON-SAI2 R2 game system.</description>
  <maintainer email="macakasit@gmail.com">ShotaAk</maintainer>
  <license>MIT</license>

  <author>HansRobo</author>
  <author>spiralray</author>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>python_cmake_module</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>launch_ros</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
