<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>consai2r2_examples</name>
  <version>0.1.0</version>
  <description>This package provides some examples of CON-SAI2 R2 system.</description>
  <maintainer email="macakasit@gmail.com">ShotaAk</maintainer>
  <license>MIT</license>

  <author>future731</author>
  <author>HansRobo</author>
  <author>spiralray</author>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>ament_index_python</exec_depend>
  <exec_depend>joy</exec_depend>
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
