<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>consai2r2_sender</name>
  <version>0.1.0</version>
  <description>This package provides senders to transmit commands to the grSim or real robots.</description>
  <maintainer email="macakasit@gmail.com">ShotaAk</maintainer>
  <license>MIT</license>

  <author>future731</author>
  <author>spiralray</author>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>consai2r2_msgs</depend>
  <depend>consai2r2_protobuf</depend>
  <depend>protobuf-dev</depend>
  <depend>boost</depend>

  <exec_depend>ament_index_python</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
